--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,5 +26,57 @@
     <div class="container">
       <%= yield %>
     </div>
+    <footer class="footer">
+      <div class="row">
+        <div class="span2 offset2">
+          <strong>CONNECT</strong><br>
+          <div>
+            <a href="http://www.facebook.com/OpenUrban">Facebook</a>
+          </div>
+          <div>
+            <a href="https://twitter.com/Open_Urban/">Twitter</a>
+          </div>
+          <div>
+            <a href="http://openurban.us5.list-manage1.com/subscribe?u=97e97774dbd51494c7edde31b&id=7dae8e55d3">Newsletter</a>
+          </div>
+          <div>
+            <a href="mailto:info@openurban.com">Email</a>
+          </div>      
+        </div>  
+        <div class="span2">
+          <strong>SUPPORT</strong><br>
+          <div>
+            <a href="https://www.paypal.com/us/cgi-bin/webscr?cmd=_flow&SESSION=RXBUJfKEXEjZogtD0-JPW4cK3P8TBMzc5NVN5U6z95zE5kTTMpQFrB7yAlS&dispatch=5885d80a13c0db1f8e263663d3faee8d14f86393d55a810282b64afed84968ec">Donate</a>
+          </div>
+          <div>
+            <a href="https://github.com/waltz/openurban">Github</a>
+          </div>    
+        </div>
+        <div class="span2">
+          <strong>ABOUT</strong>
+          <div>
+            <a href="#">Team</a>
+          </div>
+          <div>
+            <a href="#">History</a>
+          </div>    
+        </div>
+        <div class="span2">
+          <strong>HELP</strong>
+          <div>
+            <a href="#">How To</a>
+          </div>
+          <div>
+            <a href="#">FAQ</a>
+          </div>    
+        </div>
+        <div class="span3">
+          <strong>CC License</strong>
+          <div>
+            OpenUrban is a <br> 501(c)3 nonprofit
+          </div>   
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
