--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-  padding-top: 60px;
+  padding-top: 50px;
 }
 
 section {
@@ -24,7 +24,7 @@ textarea {
 }
 
 .center h1 {
-  margin-bottom: 10px;
+  margin-bottom: 0px;
 }
 
 /* typography */
@@ -34,24 +34,25 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 3em;
-  letter-spacing: -2px;
-  margin-bottom: 30px;
+  font-size: 2.25em;
+  letter-spacing: -1px;
+  margin-bottom: 0px;
   text-align: center;
 }
 
 h2 {
-  font-size: 1.2em;
-  letter-spacing: -1px;
-  margin-bottom: 30px;
-  text-align: center;
-  font-weight: normal;
+  font-size: 1.5em;
+  letter-spacing: 0px;
+  margin-bottom: .4em;
+  margin-top: 1em;
+  text-align: left;
+  font-weight: bold;
   color: #999;
 }
 
 p {
   font-size: 1.1em;
-  line-height: 1.7em;
+  line-height: 1.5em;
 }
 
 /* header */
@@ -77,7 +78,8 @@ p {
 
 footer {
   margin-top: 45px;
-  padding-top: 10px;
+  margin-bottom: 2.5em;
+  padding-top: 13px;
   border-top: 1px solid #eaeaea;
   color: #999;
 }
