--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,39 @@
-<div class="center hero-unit">
-  <h1>Welcome to the Sample App</h1>
-
-  <h2>
-    This is the home page for OpenUrban</a>
-  </h2>
-
-  <%= link_to "Create an Account!", '#', class: "btn btn-large btn-primary" %>
+<div class="center">
+	<h1>Headline Headline Headline</h1>
+</div>
+	<div class="row">
+		<div class="span12">
+			<hr>
+		</div>
+		<div class="span5 offset2">
+			<div style="border:1px solid gray; height:300px; width: 100%;">
+			</div>
+			<h2>What is OpenUrban?</h2>
+			<p>OpenUrban is a place to share information and ideas on current and proposed urban development. Specifically, it is the first user-generated web map and wiki focusing on these issues. We embrace crowd sourcing technology as a means to inform and empower. By combining written media with spatial information, OpenUrban creates a powerful tool for people to understand how their cities and communities are changing and supports their active participation in that change.<p>
+			<h2>Anyone can contribute!</h2>
+			<p>Click ADD PROJECT at the top of the page and contribute information about an urban development project in your city or community. If you are unsure how to start read Guidelines or How To instructions.</p>
+		</div>
+		<div class="span4" style="text-align: left; margin-left: 5em;">
+			<h1 style="text-align: left;">Cities<br>
+				<a href="#">Istanbul</a><br>
+				<a href="#">Seattle</a><br>
+				<a href="#">New York</a><br>
+				<a href="#">San Francisco</a><br><br>
+				<a href="#">Where's my city?</a>
+			</h1>
+			<hr>
+			<h2>
+				Featured Neighborhood 
+				<a href="#">Beyoglu</a>
+			</h2>
+			<div style="border:1px solid gray; height: 200px; width: 100%;">
+			</div>
+			<h2>
+				Featured Project 
+				<a href="#">Taksim Project</a>
+			</h2>
+			<div style="border:1px solid gray; height: 200px; width: 100%;">
+			</div>
+		</div>
+	</div>
 </div>
