updated landing page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
 		<div class="span12">
 			<hr>
 		</div>
-		<div class="span5 offset2">
+		<div class="span4 offset2" >
 			<div style="border:1px solid gray; height:300px; width: 100%;">
 			</div>
 			<h2>What is OpenUrban?</h2>
@@ -13,7 +13,7 @@
 			<h2>Anyone can contribute!</h2>
 			<p>Click ADD PROJECT at the top of the page and contribute information about an urban development project in your city or community. If you are unsure how to start read Guidelines or How To instructions.</p>
 		</div>
-		<div class="span4" style="text-align: left; margin-left: 5em;">
+		<div class="span4" style="text-align: left;">
 			<h1 style="text-align: left;">Cities<br>
 				<a href="#">Istanbul</a><br>
 				<a href="#">Seattle</a><br>
