--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,8 +25,10 @@
       <%= yield %>
     </div>
     <footer class="footer">
+      <div class="center">
+        <div class="footer_section">
       <div class="row">
-        <div class="span2 offset2">
+        <div class="span2 offset2" style="text-align: left;">
           <strong>CONNECT</strong><br>
           <div>
             <a href="http://www.facebook.com/OpenUrban">Facebook</a>
@@ -41,7 +43,7 @@
             <a href="mailto:info@openurban.com">Email</a>
           </div>      
         </div>  
-        <div class="span2">
+        <div class="span2" style="text-align: left;">
           <strong>SUPPORT</strong><br>
           <div>
             <a href="https://www.paypal.com/us/cgi-bin/webscr?cmd=_flow&SESSION=RXBUJfKEXEjZogtD0-JPW4cK3P8TBMzc5NVN5U6z95zE5kTTMpQFrB7yAlS&dispatch=5885d80a13c0db1f8e263663d3faee8d14f86393d55a810282b64afed84968ec">Donate</a>
@@ -50,7 +52,7 @@
             <a href="https://github.com/waltz/openurban">Github</a>
           </div>    
         </div>
-        <div class="span2">
+        <div class="span2" style="text-align: left;">
           <strong>ABOUT</strong>
           <div>
             <a href="#">Team</a>
@@ -59,8 +61,11 @@
             <a href="#">History</a>
           </div>    
         </div>
-        <div class="span2">
+        <div class="span2" style="text-align: left;">
           <strong>HELP</strong>
+          <div>
+            <a href="#">Guidelines</a>
+          </div>
           <div>
             <a href="#">How To</a>
           </div>
@@ -68,13 +73,21 @@
             <a href="#">FAQ</a>
           </div>    
         </div>
-        <div class="span2">
-          <strong>CC License</strong>
+        <div class="span2" style="text-align: left;">
+          <strong>CC License</strong> 
           <div>
-            OpenUrban is a <br> 501(c)3 nonprofit
-          </div>   
+            <a href="#">Disclaimers</a> 
+          </div>
+          <div>
+            <a href="#">Privacy Policy</a>
+          </div>  
         </div>
       </div>
+      <div class="span11 offset1" style="border-top: 1px solid #eaeaea; font-size: .75em; margin-top: .5em; margin-bottom: .25em; padding-top: .25em; ">
+        OpenUrban is under review for 501(c)3 nonprofit
+      </div>
+    </div>
+    </div>
     </footer>
   </body>
 </html>
