--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,8 +5,9 @@
 		<div class="span12">
 			<hr>
 		</div>
-		<div class="span4 offset2" >
-			<div style="border:1px solid gray; height:300px; width: 100%;">
+		<div class="span5 offset2" >
+			<div style="width: 100%;">
+				<iframe allowfullscreen="" frameborder="0" height="260" src="http://player.vimeo.com/video/50393065?title=0&amp;byline=0&amp;portrait=0" webkitallowfullscreen="" width="100%"></iframe>
 			</div>
 			<h2>What is OpenUrban?</h2>
 			<p>OpenUrban is a place to share information and ideas on current and proposed urban development. Specifically, it is the first user-generated web map and wiki focusing on these issues. We embrace crowd sourcing technology as a means to inform and empower. By combining written media with spatial information, OpenUrban creates a powerful tool for people to understand how their cities and communities are changing and supports their active participation in that change.<p>
