added static pages

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,9 @@
 			<p>OpenUrban is a place to share information and ideas on current and proposed urban development. Specifically, it is the first user-generated web map and wiki focusing on these issues. We embrace crowd sourcing technology as a means to inform and empower. By combining written media with spatial information, OpenUrban creates a powerful tool for people to understand how their cities and communities are changing and supports their active participation in that change.<p>
 			<h2>Anyone can contribute!</h2>
 			<p>Click ADD PROJECT at the top of the page and contribute information about an urban development project in your city or community. If you are unsure how to start read Guidelines or How To instructions.</p>
+
 		</div>
+		link_to "About", page_path("about")
 		<div class="span4" style="text-align: left;">
 			<h1 style="text-align: left;">Cities<br>
 				<a href="#">Istanbul</a><br>
