--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -94,7 +94,7 @@
         </div>
       </div>
       <div class="span11 offset1" style="border-top: 1px solid #eaeaea; font-size: .75em; margin-top: .5em; margin-bottom: .25em; padding-top: .25em; ">
-        OpenUrban is under review for 501(c)3 nonprofit
+        OpenUrban is a non-profit registered in the state of Washington - 501(c)3 status pending
       </div>
     </div>
     </div>
