trying to add logo to header

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ass<!DOCTYPE html>
 <html>
   <head>
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
