--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-ass<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
