--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,8 +46,13 @@
       </div>
     </header>
     <div class="container">
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
+      <% if notice.present? %>
+        <p class="notice"><%= notice %></p>
+      <% end %>
+ 
+     <% if alert.present? %>
+        <p class="alert"><%= alert %></p>
+      <% end %>
       <%= yield %>
     </div>
     <footer class="footer">
