Fix the about link and add an about page.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,7 +15,7 @@
 			<p>Click ADD PROJECT at the top of the page and contribute information about an urban development project in your city or community. If you are unsure how to start read Guidelines or How To instructions.</p>
 
 		</div>
-		link_to "About", page_path("about")
+		<%= link_to "About", page_path("about") %>
 		<div class="span4" style="text-align: left;">
 			<h1 style="text-align: left;">Cities<br>
 				<a href="#">Istanbul</a><br>
