--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing project</h1>
+<h1>New project</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @project %> |
 <%= link_to 'Back', projects_path %>
