--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="navbar-inner">
         <div class="container">
-          <%= link_to "Open Urban", '#', id: "logo" %> 
+          <%= link_to "Open Urban", root_path, id: "logo" %> 
           <nav>
             <ul class="nav pull-left">
               <li><%= link_to "Map", '#' %></li>
