--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
             <ul class="nav pull-left">
               <li><%= link_to "Map", '#' %></li>
               <li><%= link_to "Cities", '#' %></li>
-              <li><%= link_to "Add Project", '#' %></li>
+              <li><%= link_to "Add Project", new_project_path %></li>
             </ul>
           </nav>
           <div class="pull-right" style="margin-top: .35em">
