link to static pages and add privacy policy page and disclaimers

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,37 +80,37 @@
             <a href="https://www.paypal.com/us/cgi-bin/webscr?cmd=_flow&SESSION=RXBUJfKEXEjZogtD0-JPW4cK3P8TBMzc5NVN5U6z95zE5kTTMpQFrB7yAlS&dispatch=5885d80a13c0db1f8e263663d3faee8d14f86393d55a810282b64afed84968ec">Donate</a>
           </div>
           <div>
-            <a href="https://github.com/waltz/openurban">Github</a>
+            <a href="https://github.com/waltz/openurban/tree/lebbeus">Github</a>
           </div>    
         </div>
         <div class="span2" style="text-align: left;">
           <strong>ABOUT</strong>
           <div>
-            <a href="#">Team</a>
+            <a href="/pages/team.html.erb">Team</a>
           </div>
           <div>
-            <a href="#">History</a>
+            <a href="/pages/history.html.erb">History</a>
           </div>    
         </div>
         <div class="span2" style="text-align: left;">
           <strong>HELP</strong>
           <div>
-            <a href="#">Guidelines</a>
+            <a href="/pages/guidelines.html.erb">Guidelines</a>
           </div>
           <div>
-            <a href="#">How To</a>
+            <a href="/pages/how_to.html.erb">How To</a>
           </div>
           <div>
-            <a href="#">FAQ</a>
+            <a href="/pages/FAQ.html.erb">FAQ</a>
           </div>    
         </div>
         <div class="span2" style="text-align: left;">
           <strong>CC License</strong> 
           <div>
-            <a href="#">Disclaimers</a> 
+            <a href="/pages/disclaimers.html.erb">Disclaimers</a> 
           </div>
           <div>
-            <a href="#">Privacy Policy</a>
+            <a href="/pages/privacy_policy.html.erb">Privacy Policy</a>
           </div>  
         </div>
       </div>
