links to header

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,12 @@
     <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="navbar-inner">
         <div class="container">
-          <%= link_to "Open Urban", '#', id: "logo" %> 
+          <%= link_to "Open Urban", '/pages/home.html.erb', id: "logo" %> 
           <nav>
             <ul class="nav pull-left">
               <li><%= link_to "Map", '#' %></li>
               <li><%= link_to "Cities", '#' %></li>
-              <li><%= link_to "Add Project", '#' %></li>
+              <li><%= link_to "Add Project", '/projects/new' %></li>
             </ul>
           </nav>
           <div class="pull-right" style="margin-top: .35em">
