user page layout, plus carousel feature

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -127,7 +127,13 @@ footer ul li {
 
 }
 
-/* Static Pages */
+/* Image Carousel */
+
+.carousel-control{
+  margin-top: 4.75em;
+}
+
+ /* Static Pages */
 
 .StaticPages {
 	h1{
@@ -159,3 +165,5 @@ footer ul li {
 		margin-top: .5em;
 	}
 }
+
+
