add carousel to project page, adjust carousel on user page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -128,9 +128,11 @@ footer ul li {
 }
 
 /* Image Carousel */
+.carousel-indicators{
 
+}
 .carousel-control{
-  margin-top: 4.75em;
+  margin-top: 3.75em;
 }
 
  /* Static Pages */
