--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -7,13 +7,28 @@
 	<div class="row">
 		<div class="span9">
 			<div class="row">
-				<div class="span4">
-					<div style="border: 1px solid black; height:200px; margin-top" id="map"></div>
-				</div>
 				<div class="span5">
-					<div style="border:1px solid black; height: 200px;">
-						<div class="center">IMAGE</div>
+					<div style="background: #CCCCCC; height:300px; margin-top">
+						<div id="myCarousel" class="carousel slide">
+						  <ol class="carousel-indicators">
+						    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+						    <li data-target="#myCarousel" data-slide-to="1"></li>
+						    <li data-target="#myCarousel" data-slide-to="2"></li>
+						  </ol>
+						  <!-- Carousel items -->
+						  <div class="carousel-inner">
+						    <div class="active item">…</div>
+						    <div class="item">…</div>
+						    <div class="item">…</div>
+						  </div>
+						  <!-- Carousel nav -->
+						  <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+						  <a class="carousel-control right" href="#myCarousel" data-slide="next" >&rsaquo;</a>
+						</div>
 					</div>
+				</div>
+				<div class="span4">
+					<div style="height:300px;" id="map"></div>
 				</div>
 			</div>
 			<div class="row">
