add styling for tags on project page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -124,6 +124,14 @@ footer ul li {
 	p{
 		display: inline;
 	}
+  .content{
+    border-right: 1px solid #D4D4D4;
+    min-height: 200px; 
+    margin-top: 1em;
+  }
+  .data{
+    margin-top: .5em;
+  }
 
 }
 
