--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -33,17 +33,17 @@
 			</div>
 			<div class="row">
 				<div class="span9">
-					<div style="border: 1px solid black; height: 400px; margin-top: 1em;">
+					<div class="content">
 						<%= @project.body %>
 					</div>
 				</div>
 			</div>
 		</div>
 		<div class="span3">
-			<div style="border: 1px solid black; height:400px; padding-left: .5em;">
+			<div style="min-height:200px; padding-left: .5em;">
 				<div>
-					<h2>Skyscraper</h2>
-					<div style="">type</em> <strong>Building</strong>
+					<h1><span class="label">TAGS</span>&nbsp;<span class="label">TAGS</span>&nbsp;<span class="label">TAGS</span>&nbsp;<span class="label">TAGS</span></h1>
+					<div class="data"><em>type</em> <strong>Building</strong></div>
 				</div>
 			</div>
 		</div>
