add social media buttons

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -127,7 +127,10 @@ footer ul li {
   .content{
     border-right: 1px solid #D4D4D4;
     min-height: 200px; 
-    margin-top: 1em;
+    margin-top: .5em;
+  }
+  .social{
+    margin-top: .75em;
   }
   .data{
     margin-top: .5em;
