--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -130,7 +130,8 @@ footer ul li {
     margin-top: .5em;
   }
   .social{
-    margin-top: .75em;
+    margin-top: .5em;
+    margin-bottom: .25em;
   }
   .data{
     margin-top: .5em;
