mock-up data column layout

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -65,7 +65,27 @@
 		<div class="span3">
 			<div style="min-height:200px; padding-left: .5em;">
 				<div>
-					<div class="data"><em>type</em> <strong>Building</strong></div>
+					<div class="data"><strong>SAN FRANCISCO</strong> <em>city</em></div>
+					<div class="data"><strong>SOMA</strong> <em>neighborhood</em></div>
+					<hr>
+					<div class="data"><strong>Building</strong> <em>type</em></div>
+					<div class="data"><strong>Residential</strong> <em>use</em></div>
+					<div class="data"><strong>New Development</strong> <em>action</em></div>
+					<div class="data"><strong>Private</strong> <em>project management</em></div>
+					<div class="data"><strong>Design</strong> <em>status</em></div>
+					<div class="data"><strong>$1,000,000</strong> <em>budget</em></div>
+					<hr>
+					<div class="data"><em>related projects</em><br>
+						<a href="#"><strong>Test project</strong></a><br>
+						<a href="#"><strong>A project</strong></a><br>
+						<a href="#"><strong>Another project</strong></a>
+					</div>
+					<hr>
+					<div class="data"><em>media & links</em><br>
+						<a href="#"><strong>Some PDF</strong></a><br>
+						<a href="#"><strong>www.somewebsite.com</strong></a><br>
+						<a href="#"><strong>relevant information</strong></a>
+					</div>
 				</div>
 			</div>
 		</div>
