add user email in header when logged in

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,7 +20,7 @@
 			    <h4><%= f.label :password %></h4>
 			</div>
 			<div class="span5">
-				<h4><%= f.text_field :password %></h4>
+				<h4><%= f.password_field :password %></h4>
 			</div>
 		</div>
 		<div class="row">
