--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -179,5 +179,15 @@ footer ul li {
 		margin-top: .5em;
 	}
 }
-
+.fields{
+  h2{
+      font-size: 1.5em;
+  letter-spacing: 0px;
+  margin-bottom: .4em;
+  margin-top: .5em;
+  text-align: left;
+  font-weight: bold;
+  color: #999;
+  }
+}
 
