--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -7,11 +7,20 @@
 	</div>
 	<div class="row">
 		<div class="span4">
-			<div style="border: 1px solid black; height:200px; padding-left: .5em;">
-				<p>PROFILE IMAGE</p>
+			<div class="row">
+				<div class="span1">
+					<div style="border: 1px solid black; height:100px; width: 100px; padding-left: .5em;">
+						<p>PROFILE LOGO</p>
+					</div>
+				</div>
+				<div class="span4" style="margin-bottom: 1em;">
+					<h1>Buena Vista Neighborhood Association</h1><br>
+					<a href="http://www.bvnasf.com/index.html">www.bvnasf.com</a>
+				</div>
 			</div>
-			<div style="border: 1px solid black; height:400px; padding-left: .5em; margin-top: 1em;">
-				<p>ABOUT</p>
+			<div style="height:400px; padding-left: .5em; margin-top: 1em;">
+				<h2 class="underline">About</h2>
+				<p>Buena Vista Neighborhood Association (BVNA) is one of the larger, more effective neighborhood organizations in San Francisco, with over 400 current Members. Founded in 1964, BVNA is a forum for neighbors to share information and ideas, and to advocate when needed on issues that affect our neighborhood.BVNA serves residents and property owners in the area generally bordered by Oak Street on the north; Divisadero/Castro Streets on the east; 16th Street, upper States, Levant, Lower Terrace and Saturn Streets to Roosevelt Way and 17th Street on the south; and Ashbury Street on the west. <br>BVNA cooperates with and supports several more-local neighborhood groups within its overall area.About 80% of BVNA’s service area (and Buena Vista Park itself) are in S.F. Supervisor District 8 (Sup. Bevan Dufty), with the northern 20% of our area in District 5 (Sup. Ross Mirkarimi).<br>Our neighborhood is served by S.F. Police Department’s Park Station.BVNA monitors legislation and advocates for our neighborhood at City Hall. BVNA does not endorse political candidates or most ballot propositions, nor does it usually take a position on individual property zoning matters, etc. BVNA Membership is open to all (property owners, renters and businesses) with an interest in Buena Vista Park and the surrounding neighborhoods. </p>
 			</div>
 		</div>
 		<div class="span8">
@@ -39,8 +48,20 @@
 			</div>
 			<div class="row">
 				<div class="span4">
-					<div style="border: 1px solid black; height: 400px; margin-top: 1em;">
-						<p>list of projects</p>
+					<div style="height: 400px; margin-top: 1em;">
+						<h2 class="underline">Projects</h4>
+						<!-- list all projects created by this user -->
+						<div>
+							<h5><a href="#">Buena Vista Park Southest Slope Improvement Project</a></h5>
+							<span class="label">TAGS</span>&nbsp;<span class="label">TAGS</span>
+							<p>We are very pleased to announce that work will begin on the Buena Vista Park Southest Slope Improvement Project on or about Monday, March 16.  This $2.6 million S.F. Recreation & Park Dept.  Project is funded...  <em><a href="#">read more</a></em> </p><br><br>
+						</div>
+						<div>
+							<h5><a href="#">Bizarro Buena Vista Park Southest Slope Improvement Project</a></h5>
+							<span class="label">TAGS</span>&nbsp;<span class="label">TAGS</span>
+							<p>We are very pleased to announce that work will begin on the Bizarro Buena Vista Park Southest Slope Improvement Project on or about Monday, March 16.  This $2.6 million S.F. Recreation & Park Dept.  Project is funded...  <em><a href="#">read more</a></em> </p>
+						</div>
+
 					</div>
 				</div>
 				<div class="span4">
